Deploy first version

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Desenvolvido por: Adelmo Dias - Desenvolvedor Front End"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>OLX Clone</title>
   </head>
   <body>
